# coffee-reviews

./: .gitignore  Cargo.toml  README.md  coffee-reviews-396f6410b36b3ae0.js  coffee-reviews-396f6410b36b3ae0_bg.wasm  coffee-reviews-3ab3e003e0eec666.js  coffee-reviews-3ab3e003e0eec666_bg.wasm  coffee-reviews-422665d32d2b3c2.js  coffee-reviews-422665d32d2b3c2_bg.wasm  coffee-reviews-723952984b460294.js  coffee-reviews-723952984b460294_bg.wasm  coffee-reviews-7824590cdd9c0aa8.js  coffee-reviews-7824590cdd9c0aa8_bg.wasm  coffee-reviews-79340cfc98d2ce08.js  coffee-reviews-79340cfc98d2ce08_bg.wasm  coffee-reviews-7c8909af3cf79333.js  coffee-reviews-7c8909af3cf79333_bg.wasm  coffee-reviews-9245a8ccd183be9a.js  coffee-reviews-9245a8ccd183be9a_bg.wasm  coffee-reviews-93164b1ed5130c93.js  coffee-reviews-93164b1ed5130c93_bg.wasm  coffee-reviews-9363696dc877d963.js  coffee-reviews-9363696dc877d963_bg.wasm  coffee-reviews-b46c4af3bb51c859.js  coffee-reviews-b46c4af3bb51c859_bg.wasm  coffee-reviews-ba968af058148a93.js  coffee-reviews-ba968af058148a93_bg.wasm  coffee-reviews-d720331dedfedf23.js  coffee-reviews-d720331dedfedf23_bg.wasm  coffee-reviews-e0f10c47fdc986cc.js  coffee-reviews-e0f10c47fdc986cc_bg.wasm  coffee-reviews-f88549c2b2628c9c.js  coffee-reviews-f88549c2b2628c9c_bg.wasm  index.html  output-10e8557354845c85.css  output-2f500ff70913f30c.css  output-94a10d34e67e92c3.css  output-bb59aacddd5092b9.css  output-d9053b4b22f67edf.css  output-f3a2aab31666f82d.css  (+4 more)
.github/workflows/: deploy_to_github.yaml
src/: app.rs  main.rs  models.rs
style/: output.css
