[package]
name = "coffee-reviews"
version = "0.1.0"
edition = "2021"


[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
leptos = { version = "0.5", features = ["nightly", "csr"] }
leptos_meta = { version = "0.5", features = ["nightly", "csr"] }
leptos_router = { version = "0.5", features = ["nightly", "csr"] }
log = "0.4.20"
wasm-bindgen = "=0.2.89"
wasm-bindgen-futures = "0.4"
csv = { version = "1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }